Subindo tela de inserir jogador funcional e a proc que realiza a inserção

--- a/jogadorEquipeV/jogadorEquipeV/Views/Jogador/CadJogador.cshtml
+++ b/jogadorEquipeV/jogadorEquipeV/Views/Jogador/CadJogador.cshtml
@@ -1,5 +1,4 @@
-﻿@using jogadorEquipeV.Models
-@model modelJogador
+﻿@model jogadorEquipeV.Models.modelJogador
 
 
 @using (Html.BeginForm("CadJogador", "Jogador", FormMethod.Post, new { enctype = "multipart/form-data" }))
