--- a/jogadorEquipeV/jogadorEquipeV/Views/Shared/_Layout.cshtml
+++ b/jogadorEquipeV/jogadorEquipeV/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Cadastre um novo jogador", "CadJogador", "Jogador")</li>
                 </ul>
             </div>
         </div>
